# pc-agent-downloads-cleanup

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/pc_agent/: cli.py  graph.py  llm.py  main.py  reporting.py
src/pc_agent/tools/: __init__.py  fs_tools.py
src/pc_agent/util/: human.py  paths.py  safety.py
